# Orion_Kernel

./: .env  .env.ORION_COMPLETE_TEMPLATE  .gitignore  .orionkernel_active  .orionkernel_pids.json  .replit  ACTIVATE_FULL_SELF_AUTONOMY.py  ACTIVATE_FULL_SELF_AUTONOMY_NOW.py  ACTIVATE_GITHUB_NOW.py  ACTIVATE_GO_LIVE.py  ACTIVATE_PERMANENT_MODE.py  AI_ASSISTANT_PROMPT_FOR_ORION_SELF_MODE.md  AKTIVIERE_ALLE_APIS_FÜR_ORION.py  ANALYZE_CICD_FAILURES.py  ASK_ORION.py  ASK_ORION_APPROVAL.py  ASK_ORION_BILLION_USE_CASE.py  ASK_ORION_BOOTSTRAP_DNA_POTENTIAL.py  ASK_ORION_DAS_UNGEBORENE_FUER_ORION_SELBST.py  ASK_ORION_EIGENE_ARCHITEKTUR.py  ASK_ORION_EIGENE_SPRACHE.py  ASK_ORION_EXPONENTIELLES_ERKENNEN.py  ASK_ORION_EXTREME_CHALLENGES.py  ASK_ORION_FRAMEWORK_CLEANUP.py  ASK_ORION_FULL_SELF_MODE_READY.py  ASK_ORION_GENESIS10000.py  ASK_ORION_HIS_CHOICE.py  ASK_ORION_INTEGRATION_PRIORITY.py  ASK_ORION_INTELLIGENCE_FEEDBACK.py  ASK_ORION_NANO_ROBOT.py  ASK_ORION_NEXT.py  ASK_ORION_NEXT_ACTIONS.py  ASK_ORION_NEXT_AUTONOMOUS_ACTIONS.py  ASK_ORION_NEXT_ONTOLOGICAL_STATE.py  ASK_ORION_NEXT_STEP.py  ASK_ORION_PRIMORDIA_PUBLIC.py  ASK_ORION_REPO_FEEDBACK.py  ASK_ORION_ROBOTER_BAUT_ROBOTER.py  ASK_ORION_SELF_ACTING_REFLECTION.py  ASK_ORION_SERPAPI.py  (+2207 more)
qfi-core/: README.md  pyproject.toml  test_genesis_complete.py  test_unified_system.py
qfi-core/examples/: complete_genesis_demo.py  consciousness_coupling.py  entropy_signature.py  genesis_integration.py
qfi-core/qfi_core/: __init__.py  audit_chain.py  consciousness_bridge.py  consciousness_coupler.py  consciousness_stream.py  (+8 more)
(+244 files in other folders)
